--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
     />
     <title>React App</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
